--- a/client/main.css
+++ b/client/main.css
@@ -1,1 +1,154 @@
 /* CSS declarations go here */
+body {
+  margin: 0;
+  font-family: "Trebuchet MS", sans-serif;
+  text-align: center;
+  color: white;
+  background-color: #787D7B;
+}
+
+::selection {
+  background-color: white;
+  color: black;
+}
+
+::-moz-selection {
+  background-color: white;
+  color: black;
+}
+
+textarea {
+  color: white;
+  background-color: #707C74;
+}
+
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  color: #373C38;
+}
+::-moz-placeholder { /* Firefox 19+ */
+  color: #373C38;
+}
+:-ms-input-placeholder { /* IE 10+ */
+  color: #373C38;
+}
+:-moz-placeholder { /* Firefox 18- */
+  color: #373C38;
+}
+
+input {
+  color: white;
+  font-family: "Trebuchet MS", sans-serif;
+  background-color: #707C74;
+}
+
+#titleSection {
+  min-width: 600px;
+  position: fixed;
+  top: 0;
+  height: 64px;
+  width: 100%;
+  background-color: #373C38;
+  color: #ffffff;
+  font-family: "Courier New", sans-serif;
+  font-size: 36px;
+  font-weight: bold;
+  line-height: 64px;
+  z-index: 10;
+}
+
+#introSection {
+  z-index: 5;
+  position: fixed;
+  bottom: 0;
+  width: 250px;
+  padding: 5px;
+  border: 2px solid grey;
+  background-color: white;
+  color: #373C38;
+  opacity: 0.6;
+  display: block;
+}
+
+#introSection:hover {
+  opacity: 0.7;
+}
+
+#contentSection {
+    margin: 64px 0 0 0 ;
+    padding: 12px;
+    background-color: #787D7B;
+    color: #1C1C1C;
+}
+
+#conversationBox {
+  height: 200px;
+  padding: 10px;
+}
+
+#conversationBox, #myMsg {
+  opacity: 0.7;
+  width: 600px;
+  border: none;
+  background-color: #BDC0BA;
+  color: #373C38;
+}
+
+#conversationBox:hover {
+  opacity: 0.9;
+}
+
+#myMsg {
+  padding: 8px;
+}
+
+#myMsg:focus {
+  opacity: 0.9;
+}
+
+#submitMsg, #resetMsg {
+  padding: 6px;
+  border-radius: 15px;
+  font-weight: bold;
+  border: 5px solid white;
+  color: white;
+  cursor: pointer;
+}
+
+#submitMsg:hover, #resetMsg:hover
+{
+  background-color:white;
+  color: #787D7B;
+}
+
+a {
+  color: #373C38;
+}
+
+a:hover {
+  color:#828282;
+}
+
+a:visited {
+  color:darkgrey;
+}
+
+.highlight {
+  text-weight: bold;
+}
+
+#submittingMsg
+{
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  display: none;
+}
+#submittingMsgContent
+{
+  position: relative;
+  transform: translate(-50%, -50%);
+  padding: 2px;
+  background-color: #52433D;
+  font-size: 24px;
+  opacity: 0.9;
+}
