--- a/client/main.css
+++ b/client/main.css
@@ -4,7 +4,7 @@ body {
   font-family: "Trebuchet MS", sans-serif;
   text-align: center;
   color: white;
-  background-color: #787D7B;
+  background-color: #15163d;
 }
 
 ::selection {
@@ -19,11 +19,11 @@ body {
 
 textarea {
   color: white;
-  background-color: #707C74;
+  background-color: #15163d;
 }
 
 ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-  color: #373C38;
+  color: #15163d;
 }
 ::-moz-placeholder { /* Firefox 19+ */
   color: #373C38;
@@ -38,8 +38,10 @@ textarea {
 input {
   color: white;
   font-family: "Trebuchet MS", sans-serif;
-  background-color: #707C74;
+  background-color: #15163d;
 }
+
+
 
 #titleSection {
   min-width: 600px;
@@ -47,26 +49,193 @@ input {
   top: 0;
   height: 64px;
   width: 100%;
-  background-color: #373C38;
+  background-color: transparent;
   color: #ffffff;
-  font-family: "Courier New", sans-serif;
+  font-family: "sequi", sans-serif;
   font-size: 36px;
-  font-weight: bold;
+  font-weight: thin;
   line-height: 64px;
   z-index: 10;
 }
+
+#coolbutton{
+  height:100px;
+  width:100px;
+  padding: 6px;
+  border-radius: 15px;
+  font-weight:bold;
+  font-size: 18px;
+  border: 2px solid white;
+  color: #15163d;
+  cursor: pointer;
+  border-radius: 50%;
+  margin:50px 50px 20px 50px;
+}
+
+#coolbutton:hover{
+  height:110px;
+  width:110px;
+}
+
+#demo{
+  color: white;
+  font-family: sans-serif;
+  font-weight: thin;
+  font-size: 10px;
+}
+
+#outercircle1{
+  width: 50px;
+  height: 50px;
+}
+#circle1 {
+     width: 5px;
+     height: 5px;
+     -webkit-border-radius: 25px;
+     -moz-border-radius: 25px;
+     border-radius: 25px;
+     background: white;
+     margin: auto;
+   }
+
+   #outercircle2{
+     width: 20px;
+     height: 20px;
+   }
+
+#circle2{
+     width: 5px;
+     height: 5px;
+     -webkit-border-radius: 25px;
+     -moz-border-radius: 25px;
+     border-radius: 25px;
+     background: white;
+     margin: auto;
+   }
+
+#outercircle3{
+    width: 20px;
+    height: 20px;
+   }
+
+#circle3 {
+        width: 5px;
+        height: 5px;
+        -webkit-border-radius: 25px;
+        -moz-border-radius: 25px;
+        border-radius: 25px;
+        background: white;
+        margin: auto;
+      }
+
+.container {
+        position: relative;
+        width: 50%;
+        -webkit-transition: opacity .5s ease-in-out;
+        -moz-transition: opacity .5s ease-in-out;
+        -ms-transition: opacity .5s ease-in-out;
+        -o-transition: opacity .5s ease-in-out;
+        transition: opacity .5s ease-in-out;
+      }
+.image {
+        display: block;
+        width: 100%;
+        height: auto;
+
+      }
+/*
+.overlay {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        height: 100%;
+        width: 100%;
+        opacity: 0;
+        transition: .5s ease;
+        background-color: #15163d;
+      }
+
+
+.container:hover .overlay {
+        opacity: 1;
+      }
+*/
+ 
+.container:hover {
+        opacity: 0;
+}
+
+.vl {
+
+    border-left: 1px solid white;
+    height: 200px;
+    position: absolute;
+    left: 50%;
+    margin-left: 0px;
+    margin-top:340px;
+    top: 0;
+}
+
+
+.container2 {
+              position: relative;
+              width: 50%
+              z-index: 30;
+              margin-left: 500px;
+              -webkit-transition: opacity .5s ease-in-out;
+              -moz-transition: opacity .5s ease-in-out;
+              -ms-transition: opacity .5s ease-in-out;
+              -o-transition: opacity .5s ease-in-out;
+              transition: opacity .5s ease-in-out;
+            }
+
+.container2:hover {
+    opacity: 0;
+}
+
+.image2 {
+              display: block;
+              width: 100%;
+              height: auto;
+              margin-left: 500px;
+        }
+
+/*
+ .overlay2 {
+              position: absolute;
+              top: 0;
+              bottom: 0;
+              left: 350px;
+              right: 0;
+              height: 100%;
+              width: 100%;
+              opacity: 0;
+              transition: .5s ease;
+              background-color: #15163d;
+              z-index: 30;
+          }
+ 
+ .container2:hover .overlay2 {
+ opacity: 1;
+ }
+ 
+ */
 
 #introSection {
   z-index: 5;
   position: fixed;
   bottom: 0;
-  width: 250px;
+  width: 220px;
   padding: 5px;
-  border: 2px solid grey;
-  background-color: white;
-  color: #373C38;
+  border: 2px dotted white;
+  background-color: #15163d;
+  color: white;
   opacity: 0.6;
   display: block;
+  text-align:left;
+  padding-left: 30px
 }
 
 #introSection:hover {
@@ -74,9 +243,11 @@ input {
 }
 
 #contentSection {
+    font-family: sans-serif;
+    font-size: 14px;
     margin: 64px 0 0 0 ;
     padding: 12px;
-    background-color: #787D7B;
+    background-color: #15163d;
     color: #1C1C1C;
 }
 
@@ -88,9 +259,10 @@ input {
 #conversationBox, #myMsg {
   opacity: 0.7;
   width: 600px;
-  border: none;
-  background-color: #BDC0BA;
-  color: #373C38;
+  border-radius: 10px;
+  border-color: white;
+  background-color: #15163d;
+  color: white;
 }
 
 #conversationBox:hover {
@@ -108,8 +280,8 @@ input {
 #submitMsg, #resetMsg {
   padding: 6px;
   border-radius: 15px;
-  font-weight: bold;
-  border: 5px solid white;
+  font-weight: light;
+  border: 2px solid white;
   color: white;
   cursor: pointer;
 }
@@ -121,15 +293,15 @@ input {
 }
 
 a {
-  color: #373C38;
+  color: #acacac;
 }
 
 a:hover {
-  color:#828282;
+  color:white;
 }
 
 a:visited {
-  color:darkgrey;
+  color:grey;
 }
 
 .highlight {
