--- a/client/main.css
+++ b/client/main.css
@@ -70,11 +70,15 @@ input {
   cursor: pointer;
   border-radius: 50%;
   margin:50px 50px 20px 50px;
+  transition: all .2s ease-in-out;
 }
 
 #coolbutton:hover{
-  height:110px;
-  width:110px;
+  /*
+   height:110px;
+   width:110px;
+   */
+  transform: scale(1.1);
 }
 
 #demo{
